--- a/web115/contract.html
+++ b/web115/contract.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <h1>Gina W's Gawky Wraith | WEB115 | Course Contract</h1>
-        <nav class="menu">
+        <h1>Gina W's Gawky Wraith | WEB115 </h1>
+        <nav class="mainNav">
             <a href="index.html">Home</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
@@ -20,37 +20,41 @@
     </header>
     <main>
         <h2>Course Contract</h2>
-        <p>I, <a href="introduction.html">G. Whitley</a>, agree to abide by the terms in my Fall 2023 WEB115-N801:
-            Web Markup and Scripting with my instructor, Dr. von Briesen.</p>
+        <section class="contractParagraph1">
+            <p>I, <a href="introduction.html">G. Whitley</a>, agree to abide by the terms in my Fall 2023 WEB115-N801:
+                Web Markup and Scripting with my instructor, Dr. von Briesen.</p>
 
-        <p>I understand that all work that I do on my school and personal websites
-            will be publicly available to the world. I will not put information there that is inappropriate for
-            schoolwork,
-            or that I wish to keep private.</p>
+            <p>I understand that all work that I do on my school and personal websites
+                will be publicly available to the world. I will not put information there that is inappropriate for
+                schoolwork,
+                or that I wish to keep private.</p>
 
-        <p>I also understand that it is my work that counts for attendance, not logins or showing up for class. As such,
-            failure to turn in assignments may show as absences.</p>
+            <p>I also understand that it is my work that counts for attendance, not logins or showing up for class. As
+                such,
+                failure to turn in assignments may show as absences.</p>
 
-        <p>Signed: G Whitley, 20 August, 2023</p>
+            <p>Signed: G Whitley, 20 August, 2023</p>
+        </section>
     </main>
     <footer>
         <hr>
-        <a href="https://github.com/gwhitle">Github</a>
-        <a href="https://gwhitle.github.io/">Github.io</a>
-        <a href="https://gwhitle.github.io/web115/index.html">web115.io</a>
-        <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-        <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-        <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
-        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
-        <br>
-        Page Designed by WhitsGits
-        <hr>
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fcontract.html"
-            target="_blank"><img src="images/html_validation_button.gif" alt="html validation"></a>
-        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fcontract.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-            target="_blank"><img src="images/validation_button_css_rectangle_blue.gif" alt="css validation"></a>
+        <nav>
+            <a href="https://github.com/gwhitle">Github</a>
+            <a href="https://gwhitle.github.io/">Github.io</a>
+            <a href="https://gwhitle.github.io/web115/index.html">web115.io</a>
+            <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
+            <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
+            <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
+            <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
+            <br>
+            Page Designed by WhitsGits
+            <hr>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fcontract.html"
+                target="_blank"><img src="images/html_validation_button.gif" alt="html validation"></a>
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fcontract.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
+                target="_blank"><img src="images/validation_button_css_rectangle_blue.gif" alt="css validation"></a>
+        </nav>
     </footer>
-
 </body>
 
 </html>
