--- a/web115/index.html
+++ b/web115/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <h1>Gina W's Gawky Wraith | WEB115 | Index</h1>
-        <nav class="menu">
+        <h1>Gina W's Gawky Wraith | WEB115</h1>
+        <nav class="mainNav">
             <a href="index.html">Home</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
@@ -19,31 +19,36 @@
         </nav>
     </header>
     <main>
-        <h2>Gina's Homepage</h2>
-        <p>This is the Homepage for Gina's WEB115 course. <br>
-            This page will be frequently updated with new creations and updates for this course.<br>
-            You can learn more about me from my <br>
-            <a href="introduction.html">Introduction Page here!</a>
-        </p>
+        <h2>Homepage</h2>
+        <section class="indexParagraph1">
+            <p>This is the Homepage for Gina's WEB115 course. <br>
+                This page will be frequently updated with new creations and updates for this course.<br>
+                You can learn more about me from my <br>
+                <a href="introduction.html">Introduction Page here!</a>
+            </p>
+        </section>
     </main>
     <footer>
         <hr>
-        <a href="https://github.com/gwhitle">Github</a>
-        <a href="https://gwhitle.github.io/">Github.io</a>
-        <a href="https://gwhitle.github.io/web115/index.html">web115.io</a>
-        <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-        <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-        <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
-        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
-        <br>
-        Page Designed by WhitsGits
-        <hr>
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Findex.html"
-            target="_blank"><img src="images/html_validation_button.gif" alt="html validation image"></a>
-        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-            target="_blank"><img src="images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
-    </footer>
+        <nav>
 
+            <a href="https://github.com/gwhitle">Github</a>
+            <a href="https://gwhitle.github.io/">Github.io</a>
+            <a href="https://gwhitle.github.io/web115/index.html">web115.io</a>
+            <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
+            <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
+            <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
+            <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
+            <br>
+            Page Designed by WhitsGits
+            <hr>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Findex.html"
+                target="_blank"><img src="images/html_validation_button.gif" alt="html validation image"></a>
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
+                target="_blank"><img src="images/validation_button_css_rectangle_blue.gif"
+                    alt="css validation image"></a>
+        </nav>
+    </footer>
 </body>
 
 </html>
