--- a/web115/introduction.html
+++ b/web115/introduction.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <h1>Gina W's Gawky Wraith | WEB115 | Introduction </h1>
-        <nav class="menu">
+        <h1>Gina W's Gawky Wraith | WEB115</h1>
+        <nav class="mainNav">
             <a href="index.html">Home</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
@@ -24,41 +24,49 @@
             <img src="images/small_gatthewaterfall.jpg" alt="g at the waterfall">
             <figcaption class="waterfallImg">avoiding the camera at a waterfall</figcaption>
         </figure>
-        <p>Personal background: Born in NC</p>
-        <p>Professional Background: Former grocery stocker for 6+ years, currently working on my degree while
-            transitioning
-            to a new career.</p>
-        <p>Academic Background: Full Stack Development Student in progress.</p>
-        <p>Background in this Subject: I have taken the intro WEB-110 class, as well as most other introductory courses
-            including CIS-115, DBA-110, and CSC-151.</p>
-        <p>Primary Computer Platform: Windows 10, I used to dual boot Windows and Linux(Ubuntu) to try a new OS, I
-            enjoyed
-            it but recently reverted back.</p>
-        <p>Courses I'm in & Why:</p>
-        <ul>
-            <li>WEB115 - Web Markup and Scripting : Major Requirement</li>
+        <ul class="introList">
+            <li>Personal background: Born in NC</li>
+            <li>Professional Background: Former grocery stocker for 6+ years, currently working on my degree while
+                transitioning
+                to a new career.</li>
+            <li>Academic Background: Full Stack Development Student in progress.</li>
+            <li>Background in this Subject: I have taken the intro WEB-110 class, as well as most other introductory
+                courses
+                including CIS-115, DBA-110, and CSC-151.</li>
+            <li>Primary Computer Platform: Windows 10, I used to dual boot Windows and Linux(Ubuntu) to try a new OS, I
+                enjoyed
+                it but recently reverted back.</li>
+            <li>Courses I'm in & Why:</li>
+            <ul>
+                <li>WEB115 - Web Markup and Scripting : Major Requirement</li>
+            </ul>
+            <li>Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling
+                through
+                books, film/TV/media, and video/ tabletop games! Give me a game or media with a half decent mythos and
+                I’m
+                sold!
+            </li>
         </ul>
-        <p>Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling through
-            books, film/TV/media, and video/ tabletop games! Give me a game or media with a half decent mythos and I’m
-            sold!
-        </p>
     </main>
     <footer>
         <hr>
-        <a href="https://github.com/gwhitle">Github</a>
-        <a href="https://gwhitle.github.io/">Github.io</a>
-        <a href="https://gwhitle.github.io/web115/index.html">web115.io</a>
-        <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-        <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-        <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
-        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
-        <br>
-        Page Designed by WhitsGits
-        <hr>
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fintroduction.html"
-            target="_blank"><img src="images/html_validation_button.gif" alt="html validation"></a>
-        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fintroduction.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-            target="_blank"><img src="images/validation_button_css_rectangle_blue.gif" alt="css validator"></a>
+        <nav>
+
+            <a href="https://github.com/gwhitle">Github</a>
+            <a href="https://gwhitle.github.io/">Github.io</a>
+            <a href="https://gwhitle.github.io/web115/index.html">web115.io</a>
+            <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
+            <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
+            <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
+            <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
+            <br>
+            Page Designed by WhitsGits
+            <hr>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fintroduction.html"
+                target="_blank"><img src="images/html_validation_button.gif" alt="html validation"></a>
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fintroduction.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
+                target="_blank"><img src="images/validation_button_css_rectangle_blue.gif" alt="css validator"></a>
+        </nav>
     </footer>
 
 </body>
