--- a/web115/m2brand.html
+++ b/web115/m2brand.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Dungeons | Brand Guide</title>
+    <title>Gina W's Gawky Wraith | WEB115 | Brand Guide</title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
 
 <body>
     <header>
-        <h1 class="h1Brand">Digital Dungeons | Logo </h1>
-        <nav class="menu">
+        <h1>Gina W's Gawky Wraith | WEB115 </h1>
+        <nav class="mainNav">
             <a href="index.html">Home</a>
             <a href="introduction.html">Introduction</a>
             <a href="contract.html">Contract</a>
             <a href="m2brand.html">Brand</a>
         </nav>
+        <h1 class="h1Brand">Digital Dungeons | Logo </h1>
     </header>
     <main>
         <h2>Welcome to Digital Dungeons,</h2>
@@ -60,21 +61,26 @@
     </main>
     <footer>
         <hr>
-        <a href="https://github.com/gwhitle">Github</a>
-        <a href="https://gwhitle.github.io/">Github.io</a>
-        <a href="https://gwhitle.github.io/web115/index.html">web115.io</a>
-        <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
-        <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
-        <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
-        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
-        <br>
-        Page Designed by WhitsGits
-        <hr>
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html"
-            target="_blank"><img src="images/html_validation_button.gif" alt="html validation image"></a>
-        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
-            target="_blank"><img src="images/validation_button_css_rectangle_blue.gif" alt="css validation image"></a>
+        <nav>
+
+            <a href="https://github.com/gwhitle">Github</a>
+            <a href="https://gwhitle.github.io/">Github.io</a>
+            <a href="https://gwhitle.github.io/web115/index.html">web115.io</a>
+            <a href="https://www.freecodecamp.org/gwhitle">Freecodecamp</a>
+            <a href="https://www.codecademy.com/profiles/gwhitle">Codeacademy</a>
+            <a href="https://jsfiddle.net/user/gwhitle/fiddles/">JSFiddle</a>
+            <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
+            <br>
+            Page Designed by WhitsGits
+            <hr>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html"
+                target="_blank"><img src="images/html_validation_button.gif" alt="html validation image"></a>
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Fm2brand.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
+                target="_blank"><img src="images/validation_button_css_rectangle_blue.gif"
+                    alt="css validation image"></a>
+        </nav>
     </footer>
+
 </body>
 
 </html>
