--- a/web115/fizzbuzz0.html
+++ b/web115/fizzbuzz0.html
@@ -62,9 +62,9 @@
             <br>
             Page Designed by WhitsGits
             <hr>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Findex.html"
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Ffizzbuzz0.html"
                 target="_blank"><img src="images/html_validation_button.gif" alt="html validation image"></a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgwhitle.github.io%2Fweb115%2Ffizzbuzz0.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en"
                 target="_blank"><img src="images/validation_button_css_rectangle_blue.gif"
                     alt="css validation image"></a>
         </nav>
